--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 /* Your CSS Code here. */
  .holder{
-    display: flexbox;
+    display: flex;
     justify-content: space-between;
     flex: wrap;
  }
